--- a/css/main.css
+++ b/css/main.css
@@ -1,133 +1,4 @@
 /* CSS File By TmzOS and LkSvn - QC! Team */
-
-h1 
-{
-	padding: 0;
-	margin: 0;
-}
-
-body
-{
-	margin:0;
-	padding:0;
-}
-
-#wrapper
-{
-	background-color: #f9f9f9;
-	border-left: 1px solid #090909;
-	border-right: 1px solid #090909;
-	border-bottom: 1px solid #090909;
-	width: 400px;
-	margin: 0 auto;
-	padding: 5px;
-	height: 240px;
-	font-size: 14px;
-	font-family: verdana;
-}
-
-#inputNumber, #inputDamage
-{
-	width:50px;
-}
-
-#inputNumber
-{
-	margin-right:5px;
-}
-
-#footer
-{
-	float:left;
-	display:block;
-	width: 100%;
-	margin-top:15px;
-	font-size: 12px;
-	font-family: verdana;
-	font-weight: bold;
-	color:#000;
-}
-
-#footer a
-{
-	text-decoration:none;
-}
-
-#header
-{
-	padding: 0;
-	margin: 0;
-}
-
-#main
-{
-	margin-top:10px;
-	float:left;
-	width:100%;
-	
-}
-
-.submit
-{
-	margin-right:5px;
-	display:block;
-	width:100px;
-	padding: 4px;
-	border:1px #000 solid;
-	float:right;
-	background-color: #fff;
-	font-size: 10px;
-	font-family: verdana;
-	font-weight: bold;
-	color:#000;
-	text-decoration:none;
-	text-align:center;
-}
-
-.submit:hover
-{
-	border:1px #f00 solid;
-}
-
-
-.title
-{
-	font-size: 18px;
-	font-family: verdana;
-	font-weight: bold;
-}
-
-.version
-{
-	font-size: 10px;
-	font-family: verdana;
-	font-weight: bold;
-	float:left;
-	display:block;
-	width:100%;
-	margin-bottom:5px;
-}
-
-#resultNormal, #resultExpert
-{
-	display:block;
-	width:100%;
-	float: left;
-	padding: 0;
-	margin:10px;
-}
-
-.result, .label
-{
-	float:left;
-}
-
-.label
-{
-	font-weight: bold;
-}
-
-.result
-{
-	margin-left: 5px;
-}
+h1{font-size: 1.6rem;text-align: center;}
+h1 small{display: block;padding:0 80px 15px 0;font-size:39%;text-align: right;}
+.panel{border-style: solid;border-width: 1px;border-color: #d8d8d8;margin-bottom: 1.11111rem;padding: 1.11111rem;background: #f2f2f2;color: #333333;}
